Services, Report, Career and Rest page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -115,3 +115,7 @@ $mobileSmall: rem(479.98px);
 @import 'contacts';
 @import 'structura';
 @import 'content-page';
+@import 'report';
+@import 'career';
+@import 'services';
+@import 'rest';
