--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -100,6 +100,8 @@ $mobileSmall: rem(479.98px);
 @import 'components/header.scss';
 @import 'components/cart-popup.scss';
 @import 'components/pagination.scss';
+@import 'components/product-modal.scss';
+@import 'components/structura-modal.scss';
 // Conectarea stilurilor pentru pagini
 @import 'home';
 @import 'success';
