--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -572,6 +572,21 @@ select {
     }
 }
 
+.overlay{
+    position: fixed;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: 0.6);
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
+    &.active{
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
 .mobile-hidden {
     @media (max-width: $mobile) {
         display: none;
