--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -17,7 +17,7 @@
     }
     &-body {
         &__customer {
-            form {
+            .checkout-form {
                 display: grid;
                 grid-template-columns: repeat(2, 1fr);
                 grid-gap: 20px;
