--- a/src/scss/components/cart-popup.scss
+++ b/src/scss/components/cart-popup.scss
@@ -27,6 +27,18 @@
         display: flex;
         flex-direction: column;
     }
+    &.loading {
+        &::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background-color: hsla(0, 0%, 0%, 0.1);
+            width: 100%;
+            height: 100%;
+            display: block;
+            border-radius: 8px;
+        }
+    }
     &.open {
         opacity: 1;
         visibility: visible;
