--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -82,16 +82,16 @@ p {
             color: #fff;
         }
         &--docs {
-            &:hover{
+            &:hover {
                 color: $primary500;
                 border-color: $primary500;
             }
-            &:active{
+            &:active {
                 background-color: $primary500;
                 border-color: $primary500;
                 color: #fff;
             }
-            &.tabs__button--active{
+            &.tabs__button--active {
                 background-color: $primary500;
                 border-color: $primary500;
                 color: #fff;
@@ -220,12 +220,12 @@ p {
             height: 45px;
         }
     }
-    &__transparent{
+    &__transparent {
         padding: 20px 0;
-        background-color: #FFFFFF;
-        border: 1px solid #E6E6E6;
+        background-color: #ffffff;
+        border: 1px solid #e6e6e6;
         border-radius: 8px;
-        &:hover{
+        &:hover {
             background-color: $neutral200;
         }
     }
@@ -370,15 +370,15 @@ button {
 }
 
 .columns-2 {
-    grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(425px, 1fr));
 }
 
 .columns-3 {
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
 }
 
 .columns-4 {
-    grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
 }
 
 .gap-1 {
@@ -492,7 +492,7 @@ select {
     display: none;
 }
 
-.slider-controls__dots{
+.slider-controls__dots {
     width: fit-content !important;
     position: absolute;
     bottom: 20px !important;
@@ -502,12 +502,12 @@ select {
     .swiper-pagination-bullet {
         width: 9px;
         height: 9px;
-        border: 1px solid #FFFFFF;
+        border: 1px solid #ffffff;
         opacity: 1;
         background-color: transparent;
         &-active {
             background: rgba(255, 255, 255, 0.8);
-            border: 1px solid #FFFFFF;
+            border: 1px solid #ffffff;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         }
     }
@@ -571,7 +571,7 @@ select {
     grid-template-columns: 1fr 32.3%;
     grid-gap: 20px;
     position: relative;
-    @media (max-width: $mobile){
+    @media (max-width: $mobile) {
         display: block;
     }
 }
