--- a/src/scss/content-page.scss
+++ b/src/scss/content-page.scss
@@ -13,4 +13,59 @@
         overflow: auto;
         padding: 2px;
     }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        box-shadow: 0 0 0 1px #e6e6e6; /* this draws the table border  */
+        border-radius: 8px;
+        overflow: hidden;
+        @media (max-width: $mobile) {
+            min-width: 730px;
+        }
+        th {
+            font-weight: 500;
+        }
+        a {
+            color: $primary500;
+            text-decoration: underline;
+        }
+        thead {
+            background-color: $neutral200;
+            td,
+            th {
+                border: $border;
+                border-top: none;
+                @include adaptiv-value('padding-top', 17, 14, 1);
+                @include adaptiv-value('padding-bottom', 17, 14, 1);
+                &:first-child {
+                    border-left: none;
+                }
+                &:last-child {
+                    border-right: none;
+                }
+            }
+        }
+        tbody {
+            tr {
+                &:last-child {
+                    td {
+                        border-bottom: none;
+                    }
+                }
+            }
+            td,
+            th {
+                border: $border;
+                @include adaptiv-value('padding-top', 17, 14, 1);
+                @include adaptiv-value('padding-bottom', 17, 14, 1);
+                text-align: center;
+                &:first-child {
+                    border-left: none;
+                }
+                &:last-child {
+                    border-right: none;
+                }
+            }
+        }
+    }
 }
