--- a/src/scss/rest.scss
+++ b/src/scss/rest.scss
@@ -1,32 +1,32 @@
-.rest{
-    &__intro{
+.rest {
+    &__intro {
         display: flex;
         align-items: center;
         justify-content: center;
         height: 500px;
-        @media (max-width: $tablet){
-           padding-inline: 15px;
+        @media (max-width: $tablet) {
+            padding-inline: 15px;
         }
-        h1{
+        h1 {
             color: #FFF;
         }
     }
-    &__body{
+    &__body {
         margin-top: 20px;
     }
-    &__main{
+    &__main {
         .page__rest-slider {
             .rest-slider__body {
                 .rest-slider__slider {
                     position: relative;
                     @include adaptiv-value('width', 860, 150, 1);
-                    @media (max-width: $mobile){
+                    @media (max-width: $mobile) {
                         width: 100%;
                         max-width: 860px;
                     }
                     .slider-rest__body {
                         .slider-rest__slide {
-                            img{
+                            img {
                                 width: 100%;
                             }
                         }
@@ -46,47 +46,46 @@
                 }
             }
         }
-        .rest-desc{
+        .rest-desc {
             padding: 30px;
             border: $border;
-            p{
+            p {
                 margin-bottom: 20px;
             }
         }
     }
-    &__aside{
+    &__aside {
         border: $border;
         border-radius: 8px;
-        h3{
+        section {
+            margin-bottom: 0;
+        }
+        h3 {
             padding: 30px 0;
             text-align: center;
             background-color: $neutral200;
             border-bottom: $border;
-            @media (max-width: $tablet){
-               padding: 30px 15px;
+            @media (max-width: $tablet) {
+                padding: 30px 15px;
             }
         }
-        .aside-contact{
-            a,p{
-                display: block;
-                padding-inline: 30px;
-                padding-top: 20px;
-                padding-bottom: 20px;
-                &:not(:last-child){
-                    border-bottom: $border;
-                }
-            }
+        p {
+            display: block;
+            padding-inline: 30px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            border-bottom: $border;
         }
-        ul{
-            li{
+        ul {
+            li {
                 position: relative;
                 padding-inline: 30px;
                 padding-top: 20px;
                 padding-bottom: 20px;
-                &:not(:last-child){
+                &:not(:last-child) {
                     border-bottom: $border;
                 }
-                &::before{
+                &::before {
                     content: '';
                     position: absolute;
                     top: 50%;
