--- a/src/components/product-modal.html
+++ b/src/components/product-modal.html
@@ -1,4 +1,4 @@
-<div class='product-modal open' data-id="@@id">
+<div class='product-modal' data-id="@@id">
     <button class="product-modal__close mdi mdi-close"></button>
     <img src="@img/product.jpeg" alt="product">
     <div class="product-modal__desc">
