--- a/src/components/structura-modal.html
+++ b/src/components/structura-modal.html
@@ -1,4 +1,4 @@
-<div class="structura-modal open align-center gap-2">
+<div class="structura-modal align-center gap-2" data-structura-modal-id="@@id">
     <i class="structura-modal__close mdi mdi-close"></i>
     <div class="page__structura-slider structura-slider">
         <div class="structura-slider__body">
@@ -8,7 +8,7 @@
                         <img src="@img/structura-big.jpg" alt="structura">
                     </div>
                 </div>
-    
+
                 <div class="slider-structura-controls">
                     <div class="slider-structura-controls__dots"></div>
                     <div class="slider-structura-controls__arrows slider-arrows">
@@ -22,11 +22,12 @@
                 </div>
             </div>
         </div>
-        
+
     </div>
     <div class="structura-modal__desc">
         <h1>Fabrica de pâine nr. 2</h1>
-        <p>În anul 1973 a fost dată în exploatare fabrica nr.2. Aceasta s-a dezvoltat treptat, iar în prezent este dotată cu linii şi cuptoare moderne de fabricare a pâinii, chiflelor şi franzeluţelor. Tot aici se produc pesmeţii şi unele produse destinate sărbătorii de Paşti.</p>
+        <p>În anul 1973 a fost dată în exploatare fabrica nr.2. Aceasta s-a dezvoltat treptat, iar în prezent este dotată cu linii şi cuptoare moderne de fabricare a pâinii, chiflelor şi franzeluţelor. Tot aici se produc pesmeţii şi unele produse destinate
+            sărbătorii de Paşti.</p>
         <div class="structura-modal__buttons align-center gap-1">
             <button class="button button__transparent">
                 <img src="@img/icons/pdf.svg" alt="">
