--- a/src/components/structura-modal.html
+++ b/src/components/structura-modal.html
@@ -7,6 +7,9 @@
                     <div class="slider-structura__slide">
                         <img src="@img/structura-big.jpg" alt="structura">
                     </div>
+                    <div class="slider-structura__slide">
+                        <img src="@img/structura-big.jpg" alt="structura">
+                    </div>
                 </div>
 
                 <div class="slider-structura-controls">
