--- a/src/scss/components/structura-modal.scss
+++ b/src/scss/components/structura-modal.scss
@@ -1,4 +1,4 @@
-.structura-modal{
+.structura-modal {
     max-width: 1200px;
     width: 100%;
     position: fixed;
@@ -12,13 +12,13 @@
     background-color: #FFF;
     @include adaptiv-value('padding', 60, 40, 1);
     transition: .3s ease-in;
-    @media (max-width: $mobile){
+    @media (max-width: $mobile) {
         height: 100%;
         flex-direction: column;
         overflow: auto;
         padding: 50px 15px;
     }
-    &.open{
+    &.open {
         top: 50%;
         opacity: 1;
         visibility: visible;
@@ -26,20 +26,20 @@
     .page__structura-slider {
         .structura-slider__body {
             @include adaptiv-value('width', 600, 200, 1);
-            @media (max-width: $mobile){
+            @media (max-width: $mobile) {
                 width: 100%;
             }
             .structura-slider__slider {
                 position: relative;
                 .slider-structura__body {
                     .slider-structura__slide {
-                        @media (max-width: $mobile){
+                        @media (max-width: $mobile) {
                             width: 100% !important;
-                            img{
+                            img {
                                 width: 100%;
                             }
                         }
-                        img{
+                        img {
                             object-fit: cover;
                             object-position: center;
                             border-radius: 8px;
@@ -49,18 +49,17 @@
                 .slider-structura-controls {
                     &__dots {
                         .swiper-pagination-bullet {
-                            &-active {
-                            }
+                            &-active {}
                         }
                     }
                     &__arrows {
                         .slider-arrow {
                             z-index: 13;
                             &__prev {
-                                left: 0;
+                                left: 10px;
                             }
                             &__next {
-                                right: 0;
+                                right: 10px;
                             }
                         }
                     }
@@ -68,21 +67,21 @@
             }
         }
     }
-    &__desc{
-        h1{
+    &__desc {
+        h1 {
             @include adaptiv-value('margin-bottom', 20, 10, 1);
         }
-        p{
+        p {
             @include adaptiv-value('margin-bottom', 20, 10, 1);
         }
     }
-    &__buttons{
+    &__buttons {
         display: flex;
-        @media (max-width: $mobileSmall){
-           flex-direction: column;
+        @media (max-width: $mobileSmall) {
+            flex-direction: column;
         }
     }
-    &__close{
+    &__close {
         position: absolute;
         @include adaptiv-value('top', 30, 15, 1);
         @include adaptiv-value('right', 30, 15, 1);
