--- a/src/components/structura-modal.html
+++ b/src/components/structura-modal.html
@@ -5,15 +5,14 @@
             <div class="structura-slider__slider">
                 <div class="slider-structura__body swiper">
                     <div class="slider-structura__slide">
-                        <img src="@img/structura-big.jpg" alt="structura">
+                        <img src="@img/structura.jpeg" alt="structura">
                     </div>
                     <div class="slider-structura__slide">
-                        <img src="@img/structura-big.jpg" alt="structura">
+                        <img src="@img/structura.jpeg" alt="structura">
                     </div>
                 </div>
 
                 <div class="slider-structura-controls">
-                    <div class="slider-structura-controls__dots"></div>
                     <div class="slider-structura-controls__arrows slider-arrows">
                         <button type="button" class="slider-arrow slider-arrow__prev">
                             <i class="mdi mdi-chevron-left"></i>
@@ -29,8 +28,16 @@
     </div>
     <div class="structura-modal__desc">
         <h1>Fabrica de pâine nr. 2</h1>
-        <p>În anul 1973 a fost dată în exploatare fabrica nr.2. Aceasta s-a dezvoltat treptat, iar în prezent este dotată cu linii şi cuptoare moderne de fabricare a pâinii, chiflelor şi franzeluţelor. Tot aici se produc pesmeţii şi unele produse destinate
-            sărbătorii de Paşti.</p>
+        <div class="structura-modal__info">
+            <p>În anul 1973 a fost dată în exploatare fabrica nr.2. Aceasta s-a dezvoltat treptat, iar în prezent este dotată cu linii şi cuptoare moderne de fabricare a pâinii, chiflelor şi franzeluţelor. Tot aici se produc pesmeţii şi unele produse destinate
+                sărbătorii de Paşti.</p>
+            <p>În anul 1973 a fost dată în exploatare fabrica nr.2. Aceasta s-a dezvoltat treptat, iar în prezent este dotată cu linii şi cuptoare moderne de fabricare a pâinii, chiflelor şi franzeluţelor. Tot aici se produc pesmeţii şi unele produse destinate
+                sărbătorii de Paşti.</p>
+            <p>În anul 1973 a fost dată în exploatare fabrica nr.2. Aceasta s-a dezvoltat treptat, iar în prezent este dotată cu linii şi cuptoare moderne de fabricare a pâinii, chiflelor şi franzeluţelor. Tot aici se produc pesmeţii şi unele produse destinate
+                sărbătorii de Paşti.</p>
+            <p>În anul 1973 a fost dată în exploatare fabrica nr.2. Aceasta s-a dezvoltat treptat, iar în prezent este dotată cu linii şi cuptoare moderne de fabricare a pâinii, chiflelor şi franzeluţelor. Tot aici se produc pesmeţii şi unele produse destinate
+                sărbătorii de Paşti.</p>
+        </div>
         <div class="structura-modal__buttons align-center gap-1">
             <button class="button button__transparent">
                 <img src="@img/icons/pdf.svg" alt="">
