--- a/src/components/structura-modal.html
+++ b/src/components/structura-modal.html
@@ -8,7 +8,7 @@
                         <img src="@img/structura.jpeg" alt="structura">
                     </div>
                     <div class="slider-structura__slide">
-                        <img src="@img/structura.jpeg" alt="structura">
+                        <img src="@img/structura-big.jpg" alt="structura">
                     </div>
                 </div>
 
