--- a/src/scss/certificate.scss
+++ b/src/scss/certificate.scss
@@ -6,6 +6,13 @@
     &__container {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        @media (max-width: $mobile) {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 50px;
+        }
         .certificat {
             display: flex;
             flex-direction: column;
