--- a/src/scss/history.scss
+++ b/src/scss/history.scss
@@ -3,6 +3,27 @@
     .custom-container {
         max-width: 1080px;
     }
+    &-title {
+        position: absolute;
+        top: 30px;
+        left: 50%;
+        z-index: 2;
+        transform: translateX(-50%);
+        padding: 20px 30px;
+        background: rgba(255, 255, 255, 0.8);
+        border: 1px solid #e6e6e6;
+        backdrop-filter: blur(4px);
+        text-align: center;
+        border-radius: 8px;
+        h1 {
+            font-weight: 500;
+        }
+        &--mobile {
+            position: unset;
+            transform: none;
+            margin-bottom: 20px;
+        }
+    }
     &-container {
         display: grid;
         place-content: center;
@@ -29,7 +50,7 @@
         // For Firefox
         width: 100%;
         height: 100%;
-        &:focus-visible ~ .slider-button {
+        &:focus-visible~.slider-button {
             outline: 5px solid $neutral900;
             outline-offset: 3px;
         }
@@ -68,22 +89,6 @@
         font-size: 24px;
         i {
             height: 23px;
-        }
-    }
-    &-title {
-        position: absolute;
-        top: 30px;
-        left: 50%;
-        z-index: 2;
-        transform: translateX(-50%);
-        padding: 20px 30px;
-        background: rgba(255, 255, 255, 0.8);
-        border: 1px solid #e6e6e6;
-        backdrop-filter: blur(4px);
-        text-align: center;
-        border-radius: 8px;
-        h1 {
-            font-weight: 500;
         }
     }
     &-desc {
