--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -4,28 +4,33 @@ h1 {
     @include adaptiv-value('font-size', 32, 28, 1);
     line-height: 160%;
 }
+
 h2 {
     font-family: 'PlayfairDisplay';
     letter-spacing: 0.03em;
     @include adaptiv-value('font-size', 24, 22, 1);
     line-height: 160%;
 }
+
 h3 {
     font-weight: 500;
     @include adaptiv-value('font-size', 20, 18, 1);
     line-height: 160%;
 }
+
 h4 {
     line-height: 160%;
 }
+
 h5 {
     line-height: 160%;
 }
+
 h6 {
     line-height: 160%;
 }
-p {
-}
+
+p {}
 
 .button {
     align-items: center;
@@ -109,8 +114,7 @@ p {
             background-color: rgba(255, 255, 255, 0.8);
             color: $neutral900;
         }
-        &:active {
-        }
+        &:active {}
     }
     &__navigation {
         background-color: $neutral200;
@@ -159,7 +163,7 @@ p {
             &:active {
                 background: rgba(255, 255, 255, 0.5);
             }
-            @media (max-width: $tablet){
+            @media (max-width: $tablet) {
                 @include adaptiv-value('padding', 15, 12, 1);
             }
         }
@@ -174,7 +178,7 @@ p {
         &:active {
             background: rgba(255, 255, 255, 1);
         }
-        @media (max-width: $tablet){
+        @media (max-width: $tablet) {
             padding: 15px;
         }
     }
@@ -293,6 +297,7 @@ button {
     scrollbar-width: none;
     overflow-y: scroll;
 }
+
 .no-scrollbar::-webkit-scrollbar {
     display: none;
 }
@@ -312,36 +317,47 @@ button {
 .col-1 {
     grid-column: 1 span;
 }
+
 .col-2 {
     grid-column: 2 span;
 }
+
 .col-3 {
     grid-column: 3 span;
 }
+
 .col-4 {
     grid-column: 4 span;
 }
+
 .col-5 {
     grid-column: 5 span;
 }
+
 .col-6 {
     grid-column: 6 span;
 }
+
 .col-7 {
     grid-column: 7 span;
 }
+
 .col-8 {
     grid-column: 8 span;
 }
+
 .col-9 {
     grid-column: 9 span;
 }
+
 .col-10 {
     grid-column: 10 span;
 }
+
 .col-11 {
     grid-column: 11 span;
 }
+
 .col-12 {
     grid-column: 12 span;
 }
@@ -389,15 +405,19 @@ button {
 .gap-1 {
     grid-gap: 10px;
 }
+
 .gap-2 {
     grid-gap: 20px;
 }
+
 .gap-3 {
     @include adaptiv-value('grid-gap', 30, 20, 1);
 }
+
 .gap-4 {
     @include adaptiv-value('grid-gap', 40, 20, 1);
 }
+
 .gap-5 {
     @include adaptiv-value('grid-gap', 50, 24, 1);
 }
@@ -405,15 +425,19 @@ button {
 .flex-gap-1 {
     gap: 10px;
 }
+
 .flex-gap-2 {
     gap: 20px;
 }
+
 .flex-gap-3 {
     @include adaptiv-value('gap', 30, 20, 1);
 }
+
 .flex-gap-4 {
     @include adaptiv-value('gap', 40, 20, 1);
 }
+
 .flex-gap-5 {
     @include adaptiv-value('gap', 50, 24, 1);
 }
@@ -455,7 +479,10 @@ select {
         padding-right: 45px;
         height: 61px;
         background-color: $neutral100;
-        @include adaptiv-value('width', 300, 200, 1);
+        @include adaptiv-value('width',
+        300,
+        200,
+        1);
         &:focus {
             border-color: $error500;
         }
@@ -524,22 +551,37 @@ select {
     z-index: 2;
     top: 50%;
     transform: translateY(-50%);
-    @include adaptiv-value('padding', 15, 12, 1);
+    @include adaptiv-value('padding',
+    15,
+    12,
+    1);
     color: #fff;
     font-size: 24px;
     border-radius: 50%;
     transition: 0.3s;
-    @include adaptiv-value('max-width', 54, 48, 1);
-    @include adaptiv-value('max-height', 54, 48, 1);
+    @include adaptiv-value('max-width',
+    54,
+    48,
+    1);
+    @include adaptiv-value('max-height',
+    54,
+    48,
+    1);
     &:hover {
         background-color: #fff;
         color: $neutral900;
     }
     &__prev {
-        @include adaptiv-value('left', 200, 15, 1);
+        @include adaptiv-value('left',
+        200,
+        15,
+        1);
     }
     &__next {
-        @include adaptiv-value('right', 200, 15, 1);
+        @include adaptiv-value('right',
+        200,
+        15,
+        1);
     }
 }
 
@@ -567,7 +609,10 @@ select {
     justify-content: center;
     gap: 10px;
     margin-top: 30px;
-    @include adaptiv-value('margin-bottom', 50, 30, 1);
+    @include adaptiv-value('margin-bottom',
+    50,
+    30,
+    1);
     flex-wrap: wrap;
 }
 
@@ -580,6 +625,7 @@ select {
         display: block;
     }
 }
+
 .single-grid {
     display: grid;
     grid-template-columns: 1fr 320px;
@@ -593,7 +639,7 @@ select {
     }
 }
 
-.overlay{
+.overlay {
     position: fixed;
     inset: 0;
     width: 100%;
@@ -602,7 +648,10 @@ select {
     z-index: 10;
     opacity: 0;
     visibility: hidden;
-    &.active{
+    overflow: hidden;
+    touch-action: none;
+    -ms-touch-action: none;
+    &.active {
         opacity: 1;
         visibility: visible;
     }
@@ -613,16 +662,19 @@ select {
         display: none;
     }
 }
+
 .tablet-hidden {
     @media (max-width: $tablet) {
         display: none;
     }
 }
+
 .mobileMedium-hidden {
     @media (max-width: $mobileMedium) {
         display: none;
     }
 }
+
 .desktop-hidden {
     &--mobile {
         @media (min-width: $mobile) {
@@ -641,13 +693,13 @@ select {
     }
 }
 
-.product-modal__desc{
-    table{
+.product-modal__desc {
+    table {
         width: 100%;
         border-collapse: collapse;
         border: $border;
         overflow: hidden;
-        p{
+        p {
             margin-bottom: 5px;
         }
         th {
@@ -659,8 +711,14 @@ select {
             th {
                 border: $border;
                 border-top: none;
-                @include adaptiv-value('padding-top', 17, 14, 1);
-                @include adaptiv-value('padding-bottom', 17, 14, 1);
+                @include adaptiv-value('padding-top',
+                17,
+                14,
+                1);
+                @include adaptiv-value('padding-bottom',
+                17,
+                14,
+                1);
                 &:first-child {
                     border-left: none;
                 }
@@ -680,8 +738,14 @@ select {
             td,
             th {
                 border: $border;
-                @include adaptiv-value('padding-top', 17, 14, 1);
-                @include adaptiv-value('padding-bottom', 17, 14, 1);
+                @include adaptiv-value('padding-top',
+                17,
+                14,
+                1);
+                @include adaptiv-value('padding-bottom',
+                17,
+                14,
+                1);
                 text-align: center;
                 &:first-child {
                     border-left: none;
